Java 9 Number.valueOf