@@ -107,7 +107,7 @@ public class CommonIndicatorCalculationService extends IndicatorsCalculationServ
 		try {
 			Calendar calendar = Calendar.getInstance();
 			calendar.setTime(dateDeb);
-			Integer minDiff = new Integer("-"+MainPMScmd.getMyPrefs().get("talib.daysbackwardday","10"));
+			Integer minDiff = Integer.valueOf("-"+MainPMScmd.getMyPrefs().get("talib.daysbackwardday","10"));
 			QuotationsFactories.getFactory().incrementDate(calendar, -minDiff);
 			dateDeb =  calendar.getTime();
 
@@ -130,7 +130,7 @@ public class CommonIndicatorCalculationService extends IndicatorsCalculationServ
 
 		Map<Stock,Map<EventInfo, SortedMap<Date, double[]>>> calculatedOutputReturn =  new HashMap<Stock, Map<EventInfo, SortedMap<Date, double[]>>>(1);
 
-		ExecutorService executor = Executors.newFixedThreadPool(new Integer(MainPMScmd.getMyPrefs().get("indicatorcalculator.semaphore.nbthread","20")));
+		ExecutorService executor = Executors.newFixedThreadPool(Integer.valueOf(MainPMScmd.getMyPrefs().get("indicatorcalculator.semaphore.nbthread","20")));
 		List<Future<SymbolEvents>> futures = new ArrayList<Future<SymbolEvents>>();
 		int obsSize = stList.size() + 1;
 		for (Observer observer : observers) {
